--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "@types/express-session": "^1.17.6",
     "@types/http-errors": "^2.0.1",
     "@types/morgan": "^1.9.4",
+    "@types/nodemailer": "^6.4.7",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "eslint": "^8.35.0",
@@ -33,6 +34,7 @@
     "express-session": "^1.17.3",
     "http-errors": "^2.0.0",
     "mongoose": "^7.0.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.9.1"
   }
 }
